force-app/main/default/objects/PayrollOrder__c/PayrollOrder__c.object-meta.xml
<CustomObject>
    <label>給料支払指示</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>PAYROLL ORDER ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>