force-app/main/default/objects/PayrollOrder__c/fields/ActualPaidDate__c.field-meta.xml
<CustomField>
    <fullName>ActualPaidDate__c</fullName>
    <label>ACTUAL PAID DATE</label>
    <type>Date</type>
</CustomField>