force-app/main/default/objects/PayrollOrder__c/fields/HousingAllowanceTax__c.field-meta.xml
<CustomField>
    <fullName>HousingAllowanceTax__c</fullName>
    <label>HOUSING ALLOWANCE TAX</label>
    <summarizedField>PayrollSlip__c.HousingAllowanceTax__c</summarizedField>
    <summaryForeignKey>PayrollSlip__c.PayrollOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>