force-app/main/default/objects/PayrollOrder__c/fields/PaidEmployeeNetTakenHome__c.field-meta.xml
<CustomField>
    <fullName>PaidEmployeeNetTakenHome__c</fullName>
    <label>PAID EMPLOYEE NET TAKEN HOME</label>
    <summarizedField>PayrollSlip__c.EmployeeNetTakenHome__c</summarizedField>
    <summaryFilterItems>
        <field>PayrollSlip__c.PayrollPaid__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PayrollSlip__c.PayrollOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>