force-app/main/default/objects/PayrollOrder__c/fields/PayrollOrderName__c.field-meta.xml
<CustomField>
    <fullName>PayrollOrderName__c</fullName>
    <label>PAYROLL ORDER NAME</label>
    <length>30</length>
    <type>Text</type>
</CustomField>