force-app/main/default/objects/PayrollOrder__c/fields/PayrollPaid__c.field-meta.xml
<CustomField>
    <fullName>PayrollPaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAYROLL PAID?</label>
    <type>Checkbox</type>
</CustomField>