force-app/main/default/objects/PayrollOrder__c/fields/PayrollStatus__c.field-meta.xml
<CustomField>
    <fullName>PayrollStatus__c</fullName>
    <label>PAYROLL STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
                <default>true</default>
                <label>Registered</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Payment processing</fullName>
            </value>
            <value>
                <fullName>Payment Settled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>