force-app/main/default/objects/PayrollOrder__c/fields/TotalWithholding__c.field-meta.xml
<CustomField>
    <fullName>TotalWithholding__c</fullName>
    <label>TOTAL WITHHOLDING</label>
    <summarizedField>PayrollSlip__c.TotalWithholding__c</summarizedField>
    <summaryForeignKey>PayrollSlip__c.PayrollOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>