force-app/main/default/objects/PayrollOrder__c/fields/TotalWithholdingAfterDeduction__c.field-meta.xml
<CustomField>
    <fullName>TotalWithholdingAfterDeduction__c</fullName>
    <label>TOTAL WITHHOLDING AFTER REFUND DEDUCTION</label>
    <summarizedField>PayrollSlip__c.TotalWithholdingAfterDeduction__c</summarizedField>
    <summaryForeignKey>PayrollSlip__c.PayrollOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>