force-app/main/default/objects/PayrollOrder__c/fields/WithholdingPersonalIncomeTax__c.field-meta.xml
<CustomField>
    <fullName>WithholdingPersonalIncomeTax__c</fullName>
    <label>WITHHOLDING PERSONAL INCOME TAX</label>
    <summarizedField>PayrollSlip__c.WithholdingPersonalIncomeTax__c</summarizedField>
    <summaryForeignKey>PayrollSlip__c.PayrollOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>