force-app/main/default/objects/PayrollOrder__c/fields/WithholdingSocialInsurance__c.field-meta.xml
<CustomField>
    <fullName>WithholdingSocialInsurance__c</fullName>
    <label>WITHHOLDING COMPULSORY SOCIAL INSURANCE</label>
    <summarizedField>PayrollSlip__c.WithholdingSocialInsurance__c</summarizedField>
    <summaryForeignKey>PayrollSlip__c.PayrollOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>