force-app/main/default/objects/PayrollOrder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PayrollOrderName__c</columns>
    <columns>PayrollStatus__c</columns>
    <columns>PayPeriodStartDate__c</columns>
    <columns>PayPeriodEndDate__c</columns>
    <columns>WithholdingSocialInsurance__c</columns>
    <columns>WithholdingPersonalIncomeTax__c</columns>
    <columns>EmployeeNetTakenHome__c</columns>
    <columns>PayrollPaid__c</columns>
    <columns>ActualPaidDate__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <role>HRManager</role>
        <role>HRStaff</role>
    </sharedTo>
</ListView>